--- a/Azure/AZ400.md
+++ b/Azure/AZ400.md
@@ -1,1 +1,7 @@
+Courses & Trainings
+
 1. - [ ] [Open edx course](https://openedx.microsoft.com/courses/course-v1:Microsoft+AZ-400.1+2019_T1/course/)
+
+Required Exams
+1.  [Microsoft Certified: Azure Administrator Associate](https://www.microsoft.com/en-us/learning/azure-administrator.aspx)
+2. - [ ] [](https://www.microsoft.com/en-us/learning/exam-AZ-400.aspx)
